WIP NIFI-12985 Refactor MockProcessSession using current API methods